# my_web

./: LICENSE  README.md
my_web/: .clang-format  400.html  403.html  404.html  CMakeLists.txt  add.html  index.html  locker.h  locker.hpp  main.cc  main.cpp  readv_sendv.cpp  threadpool.hpp  webConn.cpp  web_conn.hpp  web_main.cpp
my_web/config/: Provider.cc  Provider.h  my_web.json  provider.cc  provider.h
my_web/config/rapidjson/: reader.h
my_web/doc/: Concurrent_Model.md  History.md  Purpose.md  Reflection.md
my_web/fastcgi/: Currency.h  Curreny.cc  FastCgi.cc  Fastcgi.h  FastcgiHandler.cc  FastcgiHandler.h
my_web/http/: Currency.h  Http_Msg_Handler.cc  Http_Msg_Handler.h  Http_Request.h  Http_Response.h  currency.h  http_msg_handler.cc  http_msg_handler.h  http_request.h  http_response.h
my_web/include/: Acceptor.cc  Acceptor.h  Buffer.h  Epoll.h  Epoll_event.h  HttpServer.cc  HttpServer.h  Http_Msg_Handler.h  Http_Request.h  Http_Response.h  Socket.cc  Socket.h  UserSet.cc  UserSet.h  channel.h  httpserver.h  poll.h
my_web/include/core/: Buffer.h  HttpServer.cc  HttpServer.h  UserSet.cc  UserSet.h
my_web/include/net/: Acceptor.cc  Acceptor.h  Epoll.h  Epoll_event.h  Socket.cc  Socket.h
my_web/log/: Log.cc  Log.h
my_web/test/: priority_queue_test.cc  timer.cc
my_web/util/: Priority_queue.h  Singleton.h  Threads.h  Timer.h  threads.h  timer.h
my_web/util/log/: Log.cc  Log.h
myweb/: CMakeLists.txt  main.cpp
myweb/include/: Acceptor.cc  Acceptor.h  Buffer.cc  Buffer.h  Eventloop.cc  Eventloop.h  HttpContext.cc  HttpContext.h  Socket.cc  Socket.h  Tcpconnection.cc  Tcpconnection.h  channel.cc  channel.h  httprequest.h  httpresponse.cc  httpresponse.h  httpserver.cc  httpserver.h  poll.cc  poll.h  threadpoll.cc  threadpool.h  threadpool.hpp
myweb/include/picture/: index.html
myweb/picture/: check.html  checkbox.html  index.html  test  testcgi.html  textarea.html  upload.html
myweb/picture/cgi-bin/: check.cc  checkbox.cc  checkbox.cgi  testcgi.cpp
myweb2.0/myweb/: CMakeLists.txt  main.cpp
myweb2.0/myweb/include/: Acceptor.cc  Acceptor.h  Buffer.cc  Buffer.h  Eventloop.h  HttpContext.cc  HttpContext.h  Socket.cc  Tcpconnection.cc  Tcpconnection.h  channel.cc  channel.h  httprequest.h  httpresponse.cc  httpresponse.h  httpserver.cc  httpserver.h  poll.cc  poll.h  threadpoll.cc  threadpool.h
myweb2.1/http/: http_reply.h  http_request.h
myweb2.1/myweb/: CMakeLists.txt  main.cpp
myweb2.1/myweb/http/: currency.h  http_request.h  http_response.h
myweb2.1/myweb/include/: Acceptor.cc  Buffer.cc  Buffer.h  Eventloop.cc  Eventloop.h  HttpContext.cc  HttpContext.h  Socket.h  channel.cc  httpresponse.cc  httpresponse.h  httpserver.cc  httpserver.h  newthread.h  poll.cc  poll.h
myweb2.2/my_web/: CMakeLists.txt  main.cpp
myweb2.2/my_web/http/: currency.h  http_all.h  http_msg_handler.cc  http_msg_handler.h  http_request.h  http_response.h
myweb2.2/my_web/include/: Acceptor.cc  Acceptor.h  Buffer.h  Epoll_event.h  Socket.cc  Socket.h  channel.cc  channel.h  httpserver.cc  httpserver.h  poll.h
myweb2.2/my_web/test/: add.cc
myweb2.2/my_web/util/: Singleton.h  threads.h  timer.cc  timer.h
myweb2.2/my_web/util/sparsepp/: FileSerializer.h
myweb2.2/myweb/: CMakeLists.txt  main.cpp
myweb2.2/myweb/http/: currency.h  http_msg_handler.cc  http_msg_handler.h  http_request.h  http_response.h  memorypool.h
myweb2.2/myweb/include/: Acceptor.cc  Acceptor.h  Buffer.cc  Buffer.h  Epoll_event.h  Eventloop.h  Socket.cc  Socket.h  channel.cc  channel.h  httpserver.cc  httpserver.h  newthread.h  poll.h
myweb2.2/myweb/util/: Timer.h  threads.h
